prueba final responsive

--- a/Web_design/03_RWD/index.html
+++ b/Web_design/03_RWD/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Diseño web Responsive</title>
+    <title>Lecturalia Rivas</title>
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,110 +15,144 @@
         <header class="header">
             <a href="#nav_mobile" class="nav_icon">
                 <img class="img_nav_icon" src="./images/threelines.png" alt="icono del menu">
-                <!-- &#9776; -->
             </a>
-            <h1>Diseño web Responsivo</h1>
+            <h1>Lecturalia Rivas</h1>
         </header>
-
+       <!--  Menu de navegación  -->
         <nav class="nav_desc">
             <ul>
                 <li>
-                    <a href="#">Home</a>
-                    <a href="#">Opcion 1</a>
-                    <a href="#">Opcion 2</a>
-                    <a href="#">Opcion 3</a>
-                    <a href="#">About</a>
+                    <a class="hover" href="index.html">Home</a>
+                    <a class="hover" href="#">Opcion 1</a>
+                    <a class="hover" href="#">Opcion 2</a>
+                    <a class="hover" href="#">Opcion 3</a>
+                    <a class="hover" href="#">About</a>
                 </li>
             </ul>
         </nav>
+        <!-- Contenido principal dividido en 3 columnas -->
         <main class="main">
             <div class="section_wrapper">
                 <section class="section">
+
                     <h2>Libros</h2>
                     <article>
                         <div class="img_wrapper">
-                            <img class="imagen" src="http://via.placeholder.com/350x150" alt="">
+                            <img class="imagen" src="./images/libros.jpg" alt="imagen libros de colores">
                         </div>
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quibusdam possimus impedit inventore
-                            dolores voluptates natus earum blanditiis iure quaerat iste accusamus hic ipsa perspiciatis saepe,
-                            sit numquam excepturi minima.</p>
-                        <p>Distinctio ullam, molestiae dolorum est deserunt itaque et, explicabo soluta rem debitis sint natus
-                            consectetur. Velit voluptatem ut, vel modi ipsum nulla? Ad ducimus rerum inventore. Velit excepturi
-                            nobis fugit!</p>
-                        <p>Rem vel sit modi quia ducimus? Vero, in. Quam rerum odit cupiditate natus error voluptate necessitatibus,
-                            distinctio recusandae, suscipit, eos mollitia. Omnis quae earum rem accusamus. Unde autem nihil
-                            ipsam.
+                        <p>
+                            Cuando no sabes qué leer, le puedes pedir consejo a un amigo. O a un librero. O probar suerte y comprar un libro a ciegas.
+                            La librería Eixo, de Ourense, lleva dos años ofreciendo la posibilidad de llevarte a casa un
+                            libro sin saber casi nada de él: durante el mes de abril, vende algunos previamente envueltos.
+                            Hasta que lo compras, no sabes ni el título ni el autor, a no ser que lo adivines basándote en
+                            las pistas que escriben en el envoltorio a modo de guía.
                         </p>
-                        <p>Iure, suscipit velit explicabo, at possimus amet nemo minima ab aliquid blanditiis qui voluptatibus
-                            id, fugiat ut aut dicta soluta voluptates exercitationem libero ipsam dolorem. Dolorem eum ipsam
-                            voluptates incidunt?
+                        <p>
+                            “A todo el mundo le llama la atención”, explica García, que añade esta iniciativa les sirve para mejorar la relación con
+                            sus clientes: “No queremos ser una máquina expendedora de libros. Queremos acompañar, aconsejar,
+                            recomendar autores y autoras no tan conocidos… Y así los clientes se fían”. De hecho, García
+                            cuenta que muchos de los que han probado con estos libros luego “preguntan por quién seleccionó
+                            el que se llevaron para pedirle más recomendaciones”.
                         </p>
-                        <p>Fuga est, modi, voluptatem voluptate reprehenderit unde consequatur perspiciatis officia corporis
-                            suscipit veritatis tempore? Nulla quae necessitatibus modi accusantium, consequuntur corporis
-                            eaque ducimus mollitia libero incidunt obcaecati magnam et quaerat.</p>
+                        <p>
+                            Algunas recomendaciones (también a ciegas): La librería de Sidney Elizabeth’s Bookshops, abierta en 1973, explica en su página
+                            web que fueron los primeros en llevar a cabo esta iniciativa. Sus libros a ciegas incluso se
+                            pueden comprar online.
+                        </p>
+                        <p>
+                            La respuesta desde entonces ha sido muy buena, cuenta Schmitz, que añade que mucha gente se para en el escaparate para intentar
+                            adivinar de qué libros se trata. En cuanto a la extensión de esta iniciativa por todo el mundo,
+                            Schmitz opina que “puede ser decepcionante cuando alguien la lleva a cabo de forma pobre”, pero
+                            incluso así, “si esto significa que una persona más leerá otro libro, no puedo estar en contra”.
+                        </p>
+                        <p>
+                            Según nos comenta el responsable de la web, Rory Schmitz, la idea surgió “hace unos 10 años. Al tratarse de una librería
+                            ecléctica siempre nos pedían recomendaciones y la idea fue una forma de ayudar a la gente a escoger
+                            libros que de otro modo no habría seleccionado”. Las propuestas incluyen tanto clásicos como
+                            “libros que quizás no recibieron la publicidad que merecían”.
+                        </p>
                     </article>
                 </section>
                 <section class="section">
-                    <h2>Peliculas</h2>
+                    <!-- Articulo del libro electronico -->
+                    <h2>eBooks</h2>
                     <article class="films">
                         <div class="img_wrapper">
-                            <img class="imagen" src="http://via.placeholder.com/350x150" alt="">
+                            <img class="imagen" src="./images/ebook.jpg" alt="imagen de un libro electronico">
                         </div>
 
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet quibusdam possimus impedit inventore
-                            dolores voluptates natus earum blanditiis iure quaerat iste accusamus hic ipsa perspiciatis saepe,
-                            sit numquam excepturi minima.</p>
-                        <p>Distinctio ullam, molestiae dolorum est deserunt itaque et, explicabo soluta rem debitis sint natus
-                            consectetur. Velit voluptatem ut, vel modi ipsum nulla? Ad ducimus rerum inventore. Velit excepturi
-                            nobis fugit!</p>
-                        <p>Rem vel sit modi quia ducimus? Vero, in. Quam rerum odit cupiditate natus error voluptate necessitatibus,
-                            distinctio recusandae, suscipit, eos mollitia. Omnis quae earum rem accusamus. Unde autem nihil
-                            ipsam.
+                        <p>
+                            Cuando hace un año y medio analizamos el primer Kindle Oasis, la conclusión fue clara: se postulaba como el principal candidato
+                            a mejor eReader del mercado. Pero no era perfecto porque carecía de la resistencia al agua de
+                            otros modelos premium como el Kobo Aura One y su precio era algo elevado. La nueva versión de
+                            este dispositivo, con el mismo nombre, mejora estos dos aspectos, además de incluir otras novedades
+                            relacionadas con los materiales de construcción, la pantalla y los ajustes durante la lectura.
+                        </p>
+                        <p>
+                            La característica que llama más la atención a simple vista del nuevo eReader de Amazon es que es resistente al agua. Con
+                            certificación IPX8, puede sumergirse a dos metros de profundidad durante un tiempo máximo de
+                            una hora y no hay que asustarse al probarlo: hemos derramado agua sobre él y dejado un rato bajo
+                            el grifo y sigue funcionando perfectamente. 
+                        </p>
+                        <p>
+                            Aunque se trata de una prestación obligatoria en un terminal de este precio, no es la novedad más determinante en el día
+                            a día. De hecho, consideramos mucho más interesante la mejora de su pantalla, que ha pasado de
+                            seis pulgadas —el estándar en el mercado— a siete. Aunque parezca una variación mínima, se agradece:
+                            no cuesta nada acostumbrarse a este tamaño.
                         </p>
 
-                        <p>Iure, suscipit velit explicabo, at possimus amet nemo minima ab aliquid blanditiis qui voluptatibus
-                            id, fugiat ut aut dicta soluta voluptates exercitationem libero ipsam dolorem. Dolorem eum ipsam
-                            voluptates incidunt?</p>
-                        <p>Fuga est, modi, voluptatem voluptate reprehenderit unde consequatur perspiciatis officia corporis
-                            suscipit veritatis tempore? Nulla quae necessitatibus modi accusantium, consequuntur corporis
-                            eaque ducimus mollitia libero incidunt obcaecati magnam et quaerat.</p>
+                        <p>
+                            En ella, los textos se ven muy nítidos y definidos en cualquier condición lumínica: al sol, en interiores, de noche... Además,
+                            no se cansa la vista. No en vano ha sido dotada de tecnología eInk, una resolución de 300 puntos
+                            por pixel (ppp) y un sistema de iluminación mejorado que cuenta con 12 LEDs distribuidos por
+                            sus marcos para que la luz sea más uniforme.
+                        </p>
+                        <p>
+                            El crecimiento de la superficie de lectura conlleva, como no podía ser de otra manera, un aumento del tamaño del dispositivo.
+                            No es algo exagerado, aunque cuando se sujeta el Oasis por primera vez sí resulta algo pesado.
+                            Al compararlo con otros modelos no lo es tanto: pesa prácticamente lo mismo que un Kindle Paperwhite.
+                        </p>
                     </article>
                 </section>
             </div>
+            <!-- Aqui empieza la sección de noticias -->
             <div class="aside_wrapper">
                 <aside class="aside">
-                    <h2>El tiempo</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod corporis animi reprehenderit atque, omnis
-                        id earum mollitia adipisci reiciendis quas dolorem itaque quis corrupti sequi accusamus ut ex nesciunt.
-                        Quaerat!
-                    </p>
-                    <p>Atque sapiente doloribus eius corrupti et excepturi, earum deserunt voluptatibus natus possimus similique
-                        id maxime est architecto! Quasi voluptatibus, vero fuga culpa architecto dicta et provident numquam
-                        laborum nulla impedit?</p>
-                    <p>Amet dolor, eum quisquam exercitationem nemo vero maxime natus beatae architecto consequuntur culpa repellendus
-                        animi quia aliquid minima quidem. Obcaecati quis esse quos nesciunt nisi ad alias consequuntur tempora
-                        explicabo!
-                    </p>
+                    <h2>Noticias destacadas</h2>
+                    <section class="noticias">
+                        <article class="noticia1">
+                            <h3>La noche de los libros</h3>
+                            <p>“El libro, la cultura, las humanidades, cada vez tienen una presencia más discreta en nuestra
+                                sociedad, y creo que es bueno que cada cierto tiempo reivindiquemos el espacio de la cultura
+                                tradicional”, dice Lorenzo Silva, escritor participante en los eventos y, a la sazón, director
+                                del festival Getafe Negro de literatura policiaca, que se celebra cada otoño. “Es parte de
+                                lo que nos conforma como seres humanos —nuestros valores, nuestros principios—, lo que articula
+                                nuestra convivencia”.
+                            </p>
+                        </article>
+                        <article class="noticia2">
+                            <h3>Vive la noche de los libros 2018</h3>
+                            <p>Las librerías ARRIERO y CAPALI, de Torrejón de Ardoz, se suman a las celebraciones de la “NOCHE
+                                DE LOS LIBROS EN TORREJÓN” con charlas, lecturas, debates, talleres, intervenciones artísticas,
+                                conciertos, para que los torrejoneros y torrejoneras puedan disfrutar, con las letras, hasta
+                                media noche o más. Libros para pasar los días. O para que no pasen. Libros que hacen reír
+                                y que despiertan nuestros deseos más escondidos. Libros que llegan del pasado y reinterpretan
+                                el presente. Libros para el futuro. el 20 de abril toca juntarse y celebrar la lectura entre
+                                amigos y amigas. La Asociación municipalista AMAT se suma también con el festival “TORREJÓN
+                                DE CUENTO”, una actividad pensada para todas las edades. ¿Te vienes?.
+                            </p>
+                        </article>
+                    </section>
                 </aside>
             </div>
         </main>
-        <nav id="nav_mobile" class="nav_mobile">
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                    <a href="#">Opcion 1</a>
-                    <a href="#">Opcion 2</a>
-                    <a href="#">Opcion 3</a>
-                    <a href="#">About</a>
-                </li>
-            </ul>
-        </nav>
+
+        <footer class="footer">
+            <address>&copy; Daniel Lupu</address>
+        </footer>
     </div>
-    <footer class="footer">
-        <address>&copy; Daniel Lupu</address>
-    </footer>
+
 </body>
 
 </html>
